--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -80,4 +80,16 @@
   background-color: transparent;
 }
 
+.btn-nav {
+  border: 1px solid rgba(250, 250, 250, 0.3);
+  background-color: rgba(37, 37, 37, 0.7);
+  font-weight: lighter;
+  &:hover {
+    background-color: rgba(37, 37, 37, 1);
+  }
+}
+
+ul {
+  margin-top: 12.5px
+}
 
