--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,28 @@
-<div class="home-banner" style='background-image: url( <%= asset_path 'home_banner.jpeg' %>);'>
+<div class="home-banner" style='background-image: url( <%= asset_path 'home_banner.jpg' %>);'>
   <h1>Mister Cocktail</h1>
   <p>
   <span id="banner-typed-text"></span>
   </p>
 </div>
 
-<ul>
+
+<div class="container">
+  <div class="row">
     <% @cocktails.each do |cocktail| %>
-        <li><%= link_to cocktail.name, cocktail_path(cocktail.id) %></li>
-      <% end %>
-</ul>
-
-
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+          <div class="card-category"><%= cocktail.name%> </div>
+          <div class="card-description">
+            <h2>cocktail</h2>
+            <p>Very cool city, the best</p>
+          </div>
+          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+          <a class="card-link" href="#" ></a>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 
 
