--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h1><%= @cocktail.name %></h1>
 
 <ul>
@@ -14,3 +15,4 @@
 
 <%= link_to 'add dose', new_cocktail_dose_path(@cocktail) %>
 <%= link_to 'back to index', cocktails_path %>
+</div>
